ENH: GISFilters compiles

--- a/Code/GISFilters/CMakeLists.txt
+++ b/Code/GISFilters/CMakeLists.txt
@@ -4,7 +4,7 @@ FILE(GLOB OTBGISFilters_SRCS "*.cxx" )
 
 
 
-ADD_LIBRARY(OTBGISFilters ${OTBGISFilters})
+ADD_LIBRARY(OTBGISFilters ${OTBGISFilters_SRCS})
 TARGET_LINK_LIBRARIES (OTBGISFilters OTBCommon)
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(OTBGISFilters PROPERTIES ${OTB_LIBRARY_PROPERTIES})
