ENH: added accessors for transactor

--- a/Testing/Code/GISFilters/CMakeLists.txt
+++ b/Testing/Code/GISFilters/CMakeLists.txt
@@ -24,11 +24,15 @@ ADD_TEST(gfTuPostGISCreateTableTransactorNew ${GISFILTERS_TESTS}
      otbPostGISCreateTableTransactorNew
 	)
 
+ADD_TEST(gfTuPostGISCreateTableTransactorAccessors ${GISFILTERS_TESTS}
+     otbPostGISCreateTableTransactorAccessors
+	)
 
 
 # -------       CXX source files -----------------------------------
 SET(GISFilters_SRCS
 otbPostGISCreateTableTransactorNew.cxx
+otbPostGISCreateTableTransactorAccessors.cxx
 )
 
 INCLUDE_DIRECTORIES("${OTBTesting_BINARY_DIR}")
